--- a/ejs_literals/comp_textualElements_titleList.ejs
+++ b/ejs_literals/comp_textualElements_titleList.ejs
@@ -1,6 +1,6 @@
 <%- include(`${templatePath}/shared/comp_textualElements_titleList`, { 
   listType:``,
-  listCircleTitleFontSize:``,
+  listCirclefontSize:``,
   listCircleTitle:``,
   listTxt1:``,
   listTxt2:``,
