--- a/templates/admin_panel/index.ejs
+++ b/templates/admin_panel/index.ejs
@@ -91,9 +91,9 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h2`,
-        contentTitle:`Understand the Problems & the Goals`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h2`,
+        titleText:`Understand the Problems & the Goals`,
         }) %></div>
 
 
@@ -177,9 +177,9 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h2`,
-        contentTitle:`Insights`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h2`,
+        titleText:`Insights`,
         }) %></div>
 
 
@@ -326,9 +326,9 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--full u-textCenter">
       <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-      titleColor:`colorLASObule700`,
-      titleFontSize:`h2`,
-      contentTitle:`User Typs & Product Types`,
+      fontColor:`colorLASObule700`,
+      fontSize:`h2`,
+      titleText:`User Typs & Product Types`,
       }) %></div>
     <div class="Grid Grid--gutters Grid--full">
 
@@ -344,9 +344,9 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--full u-textCenter">
       <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h2`,
-        contentTitle:`Admin Panel Design`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h2`,
+        titleText:`Admin Panel Design`,
         }) %>
     </div>
     <div class="Grid Grid--gutters Grid--full">
@@ -448,9 +448,9 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--full u-textCenter">
       <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h2`,
-        contentTitle:`Potential Impacts of Implementing initial version of the Admin`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h2`,
+        titleText:`Potential Impacts of Implementing initial version of the Admin`,
         }) %>
     </div>
     <div class="Grid Grid--gutters Grid--full">
@@ -565,9 +565,9 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--full u-textCenter">
       <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h2`,
-        contentTitle:`Reflection for the Admin Panel Project`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h2`,
+        titleText:`Reflection for the Admin Panel Project`,
         }) %>
     </div>
     <div class="Grid Grid--gutters Grid--full">
