--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -137,11 +137,11 @@
     <%- include('../shared/LRcarousel', {
       slide: '5',
       slideshowTitle: `APPOINTA: Interview Scheduling Made Simple`,
-      contentTitle1: 'Landing page',
-      contentTitle2: 'Interviews',
-      contentTitle3: 'Interview types',
-      contentTitle4: 'Interview sets',
-      contentTitle5: 'Team members',
+      titleText1: 'Landing page',
+      titleText2: 'Interviews',
+      titleText3: 'Interview types',
+      titleText4: 'Interview sets',
+      titleText5: 'Team members',
 
       img1: 'Hi-fi_Landing.svg',
       img2: 'Hi-fi_Interviews.svg',
