--- a/templates/byp_b2b_SaaS/index.ejs
+++ b/templates/byp_b2b_SaaS/index.ejs
@@ -79,9 +79,9 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`About Our App`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`About Our App`,
         }) %>
       </div>
       <div class="Grid Grid--full Grid--gutters">
@@ -165,9 +165,9 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`Identify User Needs & Drop-Off Points`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`Identify User Needs & Drop-Off Points`,
         }) %>
       </div>
 
@@ -227,9 +227,9 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
       <div class="blankHS"></div>
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`Exploring the Essential Needs of Business Owners in the Pet Industry`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`Exploring the Essential Needs of Business Owners in the Pet Industry`,
         }) %>
       </div>
 
@@ -277,10 +277,10 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
       <div class="Grid Grid--gutters Grid--full u-textCenter">
 
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
+        fontColor:`colorBYPTeal700`,
 
-        titleFontSize:`h2`,
-        contentTitle:`Key Insights for the First Iteration of App Enhancement:`,
+        fontSize:`h2`,
+        titleText:`Key Insights for the First Iteration of App Enhancement:`,
         }) %>
       </div>
 
@@ -389,9 +389,9 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`Design Updates`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`Design Updates`,
         }) %>
       </div>
 
@@ -494,9 +494,9 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`Impact of Redesign for B2B Pet Service Booking App`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`Impact of Redesign for B2B Pet Service Booking App`,
         }) %>
       </div>
 
@@ -619,9 +619,9 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
 
     <div class="Grid Grid--gutters Grid--full u-textCenter">
       <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`Reflections and Learnings:`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`Reflections and Learnings:`,
         }) %>
     </div>
 
