--- a/templates/byp_b2b_subscription/index.ejs
+++ b/templates/byp_b2b_subscription/index.ejs
@@ -82,9 +82,9 @@
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h1`,
-        contentTitle:`Current State`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h1`,
+        titleText:`Current State`,
         }) %>
       </div>
 
@@ -177,9 +177,9 @@
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h1`,
-        contentTitle:`Research Focus`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h1`,
+        titleText:`Research Focus`,
         }) %>
       </div>
       <div class="Grid Grid--gutters Grid--full">
@@ -284,10 +284,10 @@
       <div class="Grid Grid--gutters Grid--full u-textCenter">
 
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
+        fontColor:`colorBYPTeal700`,
 
-        titleFontSize:`h1`,
-        contentTitle:`Insights & Potential Solutions`,
+        fontSize:`h1`,
+        titleText:`Insights & Potential Solutions`,
         }) %>
       </div>
 
@@ -419,9 +419,9 @@
       <div class="blankHS"></div>
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`Design & Solution`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`Design & Solution`,
         }) %>
       </div>
 
@@ -522,9 +522,9 @@
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorBYPTeal700`,
-        titleFontSize:`h2`,
-        contentTitle:`Impact of Onboarding - Subscription Enhancement`,
+        fontColor:`colorBYPTeal700`,
+        fontSize:`h2`,
+        titleText:`Impact of Onboarding - Subscription Enhancement`,
         }) %>
       </div>
       <div class="Grid-cell">
@@ -603,9 +603,9 @@
 
         <div class="Grid Grid--gutters Grid--full u-textCenter">
           <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-          titleColor:`colorBYPTeal700`,
-          titleFontSize:`h2`,
-          contentTitle:`Reflection`,
+          fontColor:`colorBYPTeal700`,
+          fontSize:`h2`,
+          titleText:`Reflection`,
           }) %>
         </div>
         <div class="Grid Grid--gutters Grid--full">
