--- a/templates/byp_b2c_booking/index.ejs
+++ b/templates/byp_b2c_booking/index.ejs
@@ -81,8 +81,8 @@
     <div class="wrapper">
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
-                  titleFontSize:`h1`, contentTitle:`Background`, }) %>
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorBYPorange800`,
+                  fontSize:`h1`, titleText:`Background`, }) %>
       </div>
       <div class="Grid Grid--gutters Grid--full">
 
@@ -178,8 +178,8 @@
 
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
-                  titleFontSize:`h1`, contentTitle:`Understand`, }) %>
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorBYPorange800`,
+                  fontSize:`h1`, titleText:`Understand`, }) %>
       </div>
 
       <div class="Grid Grid--full Grid--gutters">
@@ -498,8 +498,8 @@
       <div class="blankHM"></div>
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
-                  titleFontSize:`h1`, contentTitle:`Solutions`, }) %>
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorBYPorange800`,
+                  fontSize:`h1`, titleText:`Solutions`, }) %>
       </div>
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
@@ -612,8 +612,8 @@
       </div>
       <div class="blankHM"></div>
       <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
-                  titleFontSize:`h1`, contentTitle:`Design, Testing & Iteration`, }) %>
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorBYPorange800`,
+                  fontSize:`h1`, titleText:`Design, Testing & Iteration`, }) %>
       </div>
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
@@ -675,8 +675,8 @@
 
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
-                  titleFontSize:`h1`, contentTitle:`Outcome & Reflection`, }) %>
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorBYPorange800`,
+                  fontSize:`h1`, titleText:`Outcome & Reflection`, }) %>
       </div>
 
       <div class="Grid Grid--full Grid--gutters">
