--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -2384,7 +2384,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                   <div class="blankHXS"></div>
                   <%- include(`${templatePath}/shared/comp_textualElements_titleList`, { 
                     listType:`withCircle`,
-                    listCircleTitleFontSize:`h3`,
+                    listCirclefontSize:`h3`,
                     listCircleTitle:`Primary Objective:`,
                     listTxt1:`Simplify the onboarding flow to reduce user overwhelm.`,
                     listTxt2:`Improve user understanding of the platform's features and benefits.`, 
@@ -3405,9 +3405,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                     <div class="blankHXS"></div>
 
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-                    titleColor:``,
-                    titleFontSize:`h4`,
-                    contentTitle:`Default`,
+                    fontColor:``,
+                    fontSize:`h4`,
+                    titleText:`Default`,
                     }) %>
                   </div>
 
@@ -3460,9 +3460,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                     <div class="blankHXS"></div>
 
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-                    titleColor:``,
-                    titleFontSize:`h4`,
-                    contentTitle:`Back with Menu`,
+                    fontColor:``,
+                    fontSize:`h4`,
+                    titleText:`Back with Menu`,
                     }) %>
                   </div>
                   <nav class="headerDEMO navbarN" id="">
@@ -3506,9 +3506,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                     <div class="blankHXS"></div>
 
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-                    titleColor:``,
-                    titleFontSize:`h4`,
-                    contentTitle:`Back + Text`,
+                    fontColor:``,
+                    fontSize:`h4`,
+                    titleText:`Back + Text`,
                     }) %>
                   </div>
                   <nav class="headerDEMO" id="">
@@ -3531,9 +3531,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                     <div class="blankHXS"></div>
 
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-                    titleColor:``,
-                    titleFontSize:`h4`,
-                    contentTitle:`Logo + Text`,
+                    fontColor:``,
+                    fontSize:`h4`,
+                    titleText:`Logo + Text`,
                     }) %>
                   </div>
 
