--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -89,9 +89,9 @@
 
     <div class="Grid Grid--gutters Grid--full u-textCenter">
       <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-    titleColor:``,
-    titleFontSize:`h1`,
-    contentTitle:`Expertise`,
+    fontColor:``,
+    fontSize:`h1`,
+    titleText:`Expertise`,
     }) %>
     </div>
   </div>
