--- a/templates/refining_rx_zero/index.ejs
+++ b/templates/refining_rx_zero/index.ejs
@@ -98,8 +98,8 @@
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorLASObule700`,
-                  titleFontSize:`h2`, contentTitle:`Problem Statement`, }) %>
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorLASObule700`,
+                  fontSize:`h2`, titleText:`Problem Statement`, }) %>
       </div>
       <div class="Grid Grid--gutters Grid--full">
 
@@ -175,8 +175,8 @@
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorLASObule700`,
-                  titleFontSize:`h2`, contentTitle:`Research Goal and Focus`, }) %>
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorLASObule700`,
+                  fontSize:`h2`, titleText:`Research Goal and Focus`, }) %>
       </div>
 
       <div class="Grid Grid--gutters Grid--full">
@@ -245,8 +245,8 @@
 
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--full u-textCenter">
-      <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorLASObule700`,
-                  titleFontSize:`h2`, contentTitle:`Findings`, }) %>
+      <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorLASObule700`,
+                  fontSize:`h2`, titleText:`Findings`, }) %>
     </div>
 
     <div class="Grid Grid--gutters Grid--full">
@@ -420,8 +420,8 @@
 
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--full u-textCenter">
-      <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorLASObule700`,
-                  titleFontSize:`h2`, contentTitle:`The design solution for RX Zero`, }) %>
+      <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorLASObule700`,
+                  fontSize:`h2`, titleText:`The design solution for RX Zero`, }) %>
     </div>
     <%- include(`${templatePath}/shared/comp_audioPlayer`, {
                 audioPlayerAudioUrl:`${websitePath}/worksamples/BYP_LH_wsbeebr/LHRefiningRXZero/audio_solution.mp3`,
@@ -516,8 +516,8 @@
 
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--full u-textCenter">
-      <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorLASObule700`,
-                  titleFontSize:`h2`, contentTitle:`Impact`, }) %>
+      <%- include(`${templatePath}/shared/comp_textualElements_title`, { fontColor:`colorLASObule700`,
+                  fontSize:`h2`, titleText:`Impact`, }) %>
     </div>
     <%- include(`${templatePath}/shared/comp_audioPlayer`, {
                 audioPlayerAudioUrl:`${websitePath}/worksamples/BYP_LH_wsbeebr/LHRefiningRXZero/audio_impact.mp3`,
