--- a/templates/savings_calculator/index.ejs
+++ b/templates/savings_calculator/index.ejs
@@ -83,16 +83,16 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h1`,
-        contentTitle:`Opportunity & challenge`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h1`,
+        titleText:`Opportunity & challenge`,
         }) %>
       </div>
 
       <div class="Grid Grid--gutters Grid--full">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-          titleFontSize:`h4`,
-          contentTitle:`Problem Overview`,
+          fontSize:`h4`,
+          titleText:`Problem Overview`,
           }) %>
 
 
@@ -114,8 +114,8 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
         }) %>
 
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-          titleFontSize:`h4`,
-          contentTitle:`Primary Objectives`,
+          fontSize:`h4`,
+          titleText:`Primary Objectives`,
           }) %>
 
 
@@ -145,9 +145,9 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h1`,
-        contentTitle:`Insights`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h1`,
+        titleText:`Insights`,
         }) %>
       </div>
       <div class="Grid Grid--gutters Grid--full">
@@ -248,9 +248,9 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h1`,
-        contentTitle:`Solution`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h1`,
+        titleText:`Solution`,
         }) %>
       </div>
 
@@ -333,9 +333,9 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, {
-        titleColor:`colorLASObule700`,
-        titleFontSize:`h1`,
-        contentTitle:`Projected Impact of the Cost-Benefit Calculator`,
+        fontColor:`colorLASObule700`,
+        fontSize:`h1`,
+        titleText:`Projected Impact of the Cost-Benefit Calculator`,
         }) %>
       </div>
 
