--- a/templates/seer/index.ejs
+++ b/templates/seer/index.ejs
@@ -109,11 +109,11 @@
     <%- include('../shared/LRcarousel', {
       slide: '2',
       slideshowTitle: `SEER: Enhancing Brand Impact on Reddit`,
-      contentTitle1: 'Landing page',
-      contentTitle2: 'Dashboard',
-      contentTitle3: '',
-      contentTitle4: '',
-      contentTitle5: '',
+      titleText1: 'Landing page',
+      titleText2: 'Dashboard',
+      titleText3: '',
+      titleText4: '',
+      titleText5: '',
 
       img1: 'Hi-fi_landing_short.svg',
       img2: 'Hi-fi_main.svg',
