--- a/templates/shared/LRcarousel.ejs
+++ b/templates/shared/LRcarousel.ejs
@@ -3,24 +3,24 @@
 } 
 %>
 
-<% if (typeof contentTitle1 === 'undefined') { 
-  contentTitle1 = ''; 
+<% if (typeof titleText1 === 'undefined') { 
+  titleText1 = ''; 
 } 
 %>
-<% if (typeof contentTitle2 === 'undefined') { 
-  contentTitle1 = ''; 
+<% if (typeof titleText2 === 'undefined') { 
+  titleText1 = ''; 
 } 
 %>
-<% if (typeof contentTitle3 === 'undefined') { 
-  contentTitle1 = ''; 
+<% if (typeof titleText3 === 'undefined') { 
+  titleText1 = ''; 
 } 
 %>
-<% if (typeof contentTitle4 === 'undefined') { 
-  contentTitle1 = ''; 
+<% if (typeof titleText4 === 'undefined') { 
+  titleText1 = ''; 
 } 
 %>
-<% if (typeof contentTitle5 === 'undefined') { 
-  contentTitle1 = ''; 
+<% if (typeof titleText5 === 'undefined') { 
+  titleText1 = ''; 
 } 
 %>
 
@@ -59,10 +59,10 @@
         <div class="carousel__nav Grid-cell ">
     
           <a class="slider-nav" aria-label="Go to slide 1">
-            <div> <%= contentTitle1 %> </div>
+            <div> <%= titleText1 %> </div>
           </a>
           <a class="slider-nav" aria-label="Go to slide 2">
-            <div><%= contentTitle2 %></div>
+            <div><%= titleText2 %></div>
           </a>
 
         </div>
@@ -94,13 +94,13 @@
         <div class="carousel__nav Grid-cell ">
     
           <a class="slider-nav" aria-label="Go to slide 1">
-            <div> <%= contentTitle1 %> </div>
+            <div> <%= titleText1 %> </div>
           </a>
           <a class="slider-nav" aria-label="Go to slide 2">
-            <div><%= contentTitle2 %></div>
+            <div><%= titleText2 %></div>
           </a>
           <a class="slider-nav" aria-label="Go to slide 3">
-            <div><%= contentTitle3 %></div>
+            <div><%= titleText3 %></div>
           </a>
         </div>
         <div class="LRslides Grid-cell">
@@ -131,19 +131,19 @@
     <div class="carousel__nav Grid-cell ">
 
       <a class="slider-nav" aria-label="Go to slide 1">
-        <div> <%= contentTitle1 %> </div>
+        <div> <%= titleText1 %> </div>
       </a>
       <a class="slider-nav" aria-label="Go to slide 2">
-        <div><%= contentTitle2 %></div>
+        <div><%= titleText2 %></div>
       </a>
       <a class="slider-nav" aria-label="Go to slide 3">
-        <div><%= contentTitle3 %></div>
+        <div><%= titleText3 %></div>
       </a>
       <a class="slider-nav" aria-label="Go to slide 3">
-        <div><%= contentTitle4 %></div>
+        <div><%= titleText4 %></div>
       </a>
       <a class="slider-nav" aria-label="Go to slide 3">
-        <div><%= contentTitle5 %></div>
+        <div><%= titleText5 %></div>
       </a>
     </div>
     <div class="LRslides Grid-cell">
