--- a/templates/shared/comp_textualElements_titleList.ejs
+++ b/templates/shared/comp_textualElements_titleList.ejs
@@ -23,20 +23,20 @@
   <div class="element">
     <!-- title font size -->
 
-    <% if (listCircleTitleFontSize ==='h2' ) { %>
+    <% if (listCirclefontSize ==='h2' ) { %>
     <h2>
       <strong>
         <%= listCircleTitle %>
       </strong>
     </h2>
 
-    <% } else if (listCircleTitleFontSize ==='h3' ) { %>
+    <% } else if (listCirclefontSize ==='h3' ) { %>
     <h3><strong>
         <%= listCircleTitle %>
       </strong>
     </h3>
 
-    <% } else if (listCircleTitleFontSize ==='h4' ) { %>
+    <% } else if (listCirclefontSize ==='h4' ) { %>
     <h4><strong>
         <%= listCircleTitle %>
       </strong>
